fixed spacing in admindash & added sort by section

--- a/PeerSight/main/static/main/css/adminDashboardStyles.css
+++ b/PeerSight/main/static/main/css/adminDashboardStyles.css
@@ -56,7 +56,6 @@ h2 {
 .form-section {
     display: flex;
     gap: 20px;
-    margin-top: 20px;
     align-items: center;
     justify-content: space-between;
 }
@@ -69,7 +68,6 @@ h2 {
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    margin-top: 20px;
 }
 
 .forms {
